infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # config options
  name: auth-depl # deployment or pod name
spec: # attribute of object
  replicas: 1 # amount of pod
  selector: # selector by matchlabel app
    matchLabels:
      app: auth
  template: # give template name (label of app name)
    metadata:
      labels:
        app: auth
    spec: # container info
      containers:
        - name: auth
          image: neveneve/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
