infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # config options
  name: orders-depl # deployment or pod name
spec: # attribute of object
  replicas: 1 # amount of pod
  selector: # selector by matchlabel app
    matchLabels:
      app: orders
  template: # give template name (label of app name)
    metadata:
      labels:
        app: orders
    spec: # container info
      containers:
        - name: orders
          image: neveneve/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
