infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # config options
  name: payments-depl # deployment or pod name
spec: # attribute of object
  replicas: 1 # amount of pod
  selector: # selector by matchlabel app
    matchLabels:
      app: payments
  template: # give template name (label of app name)
    metadata:
      labels:
        app: payments
    spec: # container info
      containers:
        - name: payments
          image: neveneve/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
