infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # config options
  name: ticket-depl # deployment or pod name
spec: # attribute of object
  replicas: 1 # amount of pod
  selector: # selector by matchlabel app
    matchLabels:
      app: ticket
  template: # give template name (label of app name)
    metadata:
      labels:
        app: ticket
    spec: # container info
      containers:
        - name: ticket
          image: neveneve/ticket
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv
spec:
  selector:
    app: ticket
  ports:
    - name: ticket
      protocol: TCP
      port: 3000
      targetPort: 3000
